llullParser.py
# Generated from llull.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class llullParser ( Parser ):

    grammarFileName = "llull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'<>'", "'read'", "'write'", 
                     "'if'", "'while'", "'do'", "'for'", "'else'", "'void'", 
                     "'array'", "'get'", "'set'", "','", "';'", "'='", "'0'" ]

    symbolicNames = [ "<INVALID>", "NUM", "PARL", "PARR", "BRACEL", "BRACER", 
                      "ADD", "SUB", "MULT", "DIV", "POW", "MOD", "GT", "LT", 
                      "GT_EQ", "LT_EQ", "EQUAL", "NOT_EQ", "READ", "WRITE", 
                      "IF", "WHILE", "DO", "FOR", "ELSE", "VOID", "ARRAY", 
                      "GET", "SET", "COMMA", "SCOL", "ASSIG", "ZERO", "STRING", 
                      "ID", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_function = 3
    RULE_function_stat = 4
    RULE_arguments = 5
    RULE_assignment = 6
    RULE_if_stat = 7
    RULE_condition_block = 8
    RULE_stat_block = 9
    RULE_do_while_stat = 10
    RULE_while_stat = 11
    RULE_for_stat = 12
    RULE_read = 13
    RULE_write = 14
    RULE_array_stat = 15
    RULE_getter_stat = 16
    RULE_setter_stat = 17
    RULE_expr = 18
    RULE_atom = 19

    ruleNames =  [ "root", "block", "stat", "function", "function_stat", 
                   "arguments", "assignment", "if_stat", "condition_block", 
                   "stat_block", "do_while_stat", "while_stat", "for_stat", 
                   "read", "write", "array_stat", "getter_stat", "setter_stat", 
                   "expr", "atom" ]

    EOF = Token.EOF
    NUM=1
    PARL=2
    PARR=3
    BRACEL=4
    BRACER=5
    ADD=6
    SUB=7
    MULT=8
    DIV=9
    POW=10
    MOD=11
    GT=12
    LT=13
    GT_EQ=14
    LT_EQ=15
    EQUAL=16
    NOT_EQ=17
    READ=18
    WRITE=19
    IF=20
    WHILE=21
    DO=22
    FOR=23
    ELSE=24
    VOID=25
    ARRAY=26
    GET=27
    SET=28
    COMMA=29
    SCOL=30
    ASSIG=31
    ZERO=32
    STRING=33
    ID=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(llullParser.EOF, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(llullParser.AssignmentContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.FunctionContext)
            else:
                return self.getTypedRuleContext(llullParser.FunctionContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = llullParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.VOID or _la==llullParser.ID:
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==llullParser.ID:
                    self.state = 40
                    self.assignment()
                    self.state = 45
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 46
                        self.function()

                    else:
                        raise NoViableAltException(self)
                    self.state = 49 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.assignment() 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(llullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = llullParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.READ) | (1 << llullParser.WRITE) | (1 << llullParser.IF) | (1 << llullParser.WHILE) | (1 << llullParser.DO) | (1 << llullParser.FOR) | (1 << llullParser.ARRAY) | (1 << llullParser.GET) | (1 << llullParser.SET) | (1 << llullParser.ID))) != 0):
                self.state = 64
                self.stat()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(llullParser.AssignmentContext,0)


        def array_stat(self):
            return self.getTypedRuleContext(llullParser.Array_statContext,0)


        def getter_stat(self):
            return self.getTypedRuleContext(llullParser.Getter_statContext,0)


        def setter_stat(self):
            return self.getTypedRuleContext(llullParser.Setter_statContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(llullParser.If_statContext,0)


        def while_stat(self):
            return self.getTypedRuleContext(llullParser.While_statContext,0)


        def do_while_stat(self):
            return self.getTypedRuleContext(llullParser.Do_while_statContext,0)


        def for_stat(self):
            return self.getTypedRuleContext(llullParser.For_statContext,0)


        def function_stat(self):
            return self.getTypedRuleContext(llullParser.Function_statContext,0)


        def read(self):
            return self.getTypedRuleContext(llullParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(llullParser.WriteContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = llullParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.array_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.getter_stat()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.setter_stat()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.if_stat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.while_stat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.do_while_stat()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.for_stat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 78
                self.function_stat()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 79
                self.read()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 80
                self.write()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(llullParser.VOID, 0)

        def function_stat(self):
            return self.getTypedRuleContext(llullParser.Function_statContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = llullParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(llullParser.VOID)
            self.state = 84
            self.function_stat()
            self.state = 85
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def arguments(self):
            return self.getTypedRuleContext(llullParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_function_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_stat" ):
                return visitor.visitFunction_stat(self)
            else:
                return visitor.visitChildren(self)




    def function_stat(self):

        localctx = llullParser.Function_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(llullParser.ID)
            self.state = 88
            self.match(llullParser.PARL)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.NUM) | (1 << llullParser.PARL) | (1 << llullParser.SUB) | (1 << llullParser.GET) | (1 << llullParser.STRING) | (1 << llullParser.ID))) != 0):
                self.state = 89
                self.arguments()


            self.state = 92
            self.match(llullParser.PARR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMMA)
            else:
                return self.getToken(llullParser.COMMA, i)

        def getRuleIndex(self):
            return llullParser.RULE_arguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = llullParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.expr(0)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.COMMA:
                self.state = 95
                self.match(llullParser.COMMA)
                self.state = 96
                self.expr(0)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def ASSIG(self):
            return self.getToken(llullParser.ASSIG, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = llullParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(llullParser.ID)
            self.state = 103
            self.match(llullParser.ASSIG)
            self.state = 104
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.IF)
            else:
                return self.getToken(llullParser.IF, i)

        def condition_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.Condition_blockContext)
            else:
                return self.getTypedRuleContext(llullParser.Condition_blockContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.ELSE)
            else:
                return self.getToken(llullParser.ELSE, i)

        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_if_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)




    def if_stat(self):

        localctx = llullParser.If_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(llullParser.IF)
            self.state = 107
            self.condition_block()
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108
                    self.match(llullParser.ELSE)
                    self.state = 109
                    self.match(llullParser.IF)
                    self.state = 110
                    self.condition_block() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.ELSE:
                self.state = 116
                self.match(llullParser.ELSE)
                self.state = 117
                self.stat_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_condition_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_block" ):
                return visitor.visitCondition_block(self)
            else:
                return visitor.visitChildren(self)




    def condition_block(self):

        localctx = llullParser.Condition_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.expr(0)
            self.state = 121
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stat_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BRACEL(self):
            return self.getToken(llullParser.BRACEL, 0)

        def block(self):
            return self.getTypedRuleContext(llullParser.BlockContext,0)


        def BRACER(self):
            return self.getToken(llullParser.BRACER, 0)

        def getRuleIndex(self):
            return llullParser.RULE_stat_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = llullParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stat_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(llullParser.BRACEL)
            self.state = 124
            self.block()
            self.state = 125
            self.match(llullParser.BRACER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(llullParser.DO, 0)

        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def WHILE(self):
            return self.getToken(llullParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_do_while_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_stat" ):
                return visitor.visitDo_while_stat(self)
            else:
                return visitor.visitChildren(self)




    def do_while_stat(self):

        localctx = llullParser.Do_while_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_do_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(llullParser.DO)
            self.state = 128
            self.stat_block()
            self.state = 129
            self.match(llullParser.WHILE)
            self.state = 130
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(llullParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_while_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)




    def while_stat(self):

        localctx = llullParser.While_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(llullParser.WHILE)
            self.state = 133
            self.expr(0)
            self.state = 134
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(llullParser.FOR, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(llullParser.AssignmentContext,i)


        def SCOL(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.SCOL)
            else:
                return self.getToken(llullParser.SCOL, i)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def stat_block(self):
            return self.getTypedRuleContext(llullParser.Stat_blockContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_for_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_stat" ):
                return visitor.visitFor_stat(self)
            else:
                return visitor.visitChildren(self)




    def for_stat(self):

        localctx = llullParser.For_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_for_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(llullParser.FOR)
            self.state = 137
            self.match(llullParser.PARL)
            self.state = 138
            self.assignment()
            self.state = 139
            self.match(llullParser.SCOL)
            self.state = 140
            self.expr(0)
            self.state = 141
            self.match(llullParser.SCOL)
            self.state = 142
            self.assignment()
            self.state = 143
            self.match(llullParser.PARR)
            self.state = 144
            self.stat_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(llullParser.READ, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_read

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = llullParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(llullParser.READ)
            self.state = 147
            self.match(llullParser.PARL)
            self.state = 148
            self.match(llullParser.ID)
            self.state = 149
            self.match(llullParser.PARR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(llullParser.WRITE, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMMA)
            else:
                return self.getToken(llullParser.COMMA, i)

        def getRuleIndex(self):
            return llullParser.RULE_write

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = llullParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_write)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(llullParser.WRITE)
            self.state = 152
            self.match(llullParser.PARL)
            self.state = 153
            self.expr(0)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.COMMA:
                self.state = 154
                self.match(llullParser.COMMA)
                self.state = 155
                self.expr(0)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(llullParser.PARR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(llullParser.ARRAY, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def COMMA(self):
            return self.getToken(llullParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_array_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_stat" ):
                return visitor.visitArray_stat(self)
            else:
                return visitor.visitChildren(self)




    def array_stat(self):

        localctx = llullParser.Array_statContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_array_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(llullParser.ARRAY)
            self.state = 164
            self.match(llullParser.PARL)
            self.state = 165
            self.match(llullParser.ID)
            self.state = 166
            self.match(llullParser.COMMA)
            self.state = 167
            self.expr(0)
            self.state = 168
            self.match(llullParser.PARR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Getter_statContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GET(self):
            return self.getToken(llullParser.GET, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def ID(self):
            return self.getToken(llullParser.ID, 0)

        def COMMA(self):
            return self.getToken(llullParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_getter_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetter_stat" ):
                return visitor.visitGetter_stat(self)
            else:
                return visitor.visitChildren(self)




    def getter_stat(self):
